--- a/src/styles.css
+++ b/src/styles.css
@@ -45,7 +45,6 @@ body {
 
 header {
   margin: 1rem;
-  user-select: none;
 }
 
 .grab {
@@ -57,6 +56,7 @@ header {
   margin: auto;
   cursor: grab;
   font-family: monospace;
+  user-select: none;
 }
 
 main {
@@ -69,6 +69,15 @@ main {
 main ul li {
   margin: 1rem;
   list-style: none;
+}
+
+.multiline {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
 }
 
 .select-me {
